--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@stencil/sass": "^1.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
-    "firebase-tools": "^11.0.1"
+    "firebase-tools": "^11.0.1",
+    "prettier": "^2.6.2"
   }
 }
